--- a/crates/disciplina/Cargo.toml
+++ b/crates/disciplina/Cargo.toml
@@ -12,6 +12,7 @@ rust_decimal_macros = "1.33"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 # Error handling  
 thiserror = "1.0"
