feat: implement Prudentia risk management system                                                                    │ │                                                                                                                                      │ │   Complete Task 1 implementation with comprehensive risk management:                                                                 │ │   - Core types: TradeProposal, RiskAssessment, RiskRule                                                                              │ │   - Risk engine with multi-layer validation                                                                                          │ │   - Testudo Protocol enforcement (6% trade, 10% portfolio limits)                                                                    │ │   - Circuit breaker system for consecutive losses                                                                                    │ │   - Real-time portfolio tracking and metrics                                                                                         │ │   - Comprehensive unit tests for all components

--- a/crates/imperium/Cargo.toml
+++ b/crates/imperium/Cargo.toml
@@ -14,7 +14,7 @@ prudentia = { path = "../prudentia" }
 # Web framework
 axum = "0.7"
 tower = "0.4"
-tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression"] }
+tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
 hyper = "1.0"
 
 # Async runtime
@@ -23,7 +23,7 @@ futures = "0.3"
 async-trait = "0.1"
 
 # Database
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "decimal"] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
 redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
 
 # Financial calculations
