--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # Database
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "decimal"] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
 redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
 
 # Financial calculations
@@ -90,10 +90,7 @@ panic = "abort"
 opt-level = 0
 debug = true
 
-[[bench]]
-name = "position_sizing"
-harness = false
-
-[[bench]] 
-name = "ooda_loop"
-harness = false
+# Benchmarks will be added later
+# [[bench]]
+# name = "position_sizing"
+# harness = false
