--- a/crates/prudentia/Cargo.toml
+++ b/crates/prudentia/Cargo.toml
@@ -2,7 +2,7 @@
 name = "prudentia"
 version = "0.1.0"
 edition = "2021"
-description = "Exchange integration adapters with failover and circuit breaker patterns"
+description = "Risk management and Testudo Protocol enforcement with comprehensive trade validation"
 license = "MIT"
 
 [dependencies]
@@ -38,6 +38,9 @@ anyhow = "1.0"
 
 # Logging
 tracing = "0.1"
+
+# UUID for unique identifiers
+uuid = { version = "1.0", features = ["v4", "serde"] }
 
 # Rate limiting and circuit breakers
 governor = "0.6"
