feat(formatio): implement Phase 4 RiskDecider with protocol integration
  - Complete RiskDecider component with sub-25ms decision latency
  - Integration with prudentia::RiskManagementProtocol for risk validation
  - Comprehensive audit trail and OODA state transitions (Acting/Failed)
  - 8 integration tests covering all decision scenarios
  - Type-safe conversion between formatio and prudentia proposals

--- a/crates/formatio/Cargo.toml
+++ b/crates/formatio/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2021"
 description = "OODA Loop trading operations - systematic trade execution framework"
 license = "MIT"
 
+[lib]
+name = "formatio"
+path = "src/lib.rs"
+
 [dependencies]
 # Internal workspace dependencies
 disciplina = { path = "../disciplina" }
+prudentia = { path = "../prudentia" }
 testudo-types = { path = "../testudo-types" }
 
 # Financial calculations
