chore(backend): stabilize foundation for UI development
This commit completes the backend stabilization phase, ensuring all core crates are buildable, tested, and ready for frontend integration.

- Fix binary target issues in all library crates.
- Add missing FormatioError and OodaController types.
- Standardize symbol format to BTC/USDT across the workspace.
- Verify all core tests are passing.restructuring and consolidating

--- a/config/default.toml
+++ b/config/default.toml
@@ -92,7 +92,7 @@ max_files = 10
 
 # Market Data Configuration
 [market_data]
-default_symbols = ["BTCUSDT", "ETHUSDT", "ADAUSDT", "SOLUSDT", "DOTUSDT"]
+default_symbols = ["BTC/USDT", "ETH/USDT", "ADA/USDT", "SOL/USDT", "DOT/USDT"]
 update_frequency = "100ms"
 order_book_depth = 20
 enable_trade_stream = true
