Redid gemini.md, altered some imperium files but the ai was being a fk

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ members = [
     "crates/prudentia",
     "crates/imperium",
     "crates/testudo-types",
+    "frontend",
 ]
+resolver = "2"
 default-members = ["crates/imperium"]
 
 [workspace.dependencies]
