feat(auth): Implement OIDC authentication and real-time services
This commit introduces a complete OIDC/OAuth2 authentication system and integrates it across the backend and frontend.

    Backend: Implements a Keycloak-based authentication system with Redis for secure session management and integrates user risk profiles.

    Frontend: Establishes a global authentication provider in Leptos, with protected routes and a full login/logout UI flow.

    Services: Deploys an auto-recovering WebSocket for real-time data and integrates the Van Tharp calculator, both driven by the new auth state.

Note: This feature implementation is separate from the ongoing exit status: 101 build failure, which is not resolved by this commit.

--- a/crates/imperium/Cargo.toml
+++ b/crates/imperium/Cargo.toml
@@ -42,6 +42,10 @@ jsonwebtoken.workspace = true
 
 # Crate-specific dependencies
 axum-extra = { version = "0.9", features = ["typed-header"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
+base64 = "0.21"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+url = "2.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
