--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,16 @@ members = [
 resolver = "2"
 default-members = ["crates/imperium"]
 
+# Leptos configuration for cargo-leptos
+[[workspace.metadata.leptos]]
+name = "testudo-frontend"
+
+# The name of the WASM package (frontend)
+lib-package = "testudo-frontend"
+
+# The name of the server package (backend)
+bin-package = "imperium"
+
 [workspace.dependencies]
 axum = "0.7"
 tower = "0.4"
@@ -46,6 +56,14 @@ argon2 = "0.5"
 jsonwebtoken = "9.0"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
+
+# Frontend-specific profile for WASM optimization
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = "debuginfo"
 
 [workspace.dev-dependencies]
 proptest = "1.0"
