--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,15 +7,18 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-leptos = { version = "0.6", features = ["csr"] }
-leptos_router = { version = "0.6", features = ["csr"] }
+leptos = { version = "0.7", features = ["csr"] }
+leptos_router = { version = "0.7" }
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "console"] }
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "console", "WebSocket", "MessageEvent"] }
+js-sys = "0.3"
 console_error_panic_hook = "0.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+gloo = { version = "0.11", features = ["console"] }
+gloo-timers = { version = "0.3", features = ["futures"] }
+thaw = "0.4"
+icondata = "0.3"
+icondata_core = "0.1"
 
-[profile.release]
-opt-level = "z"
-lto = true
-codegen-units = 1
-panic = "abort"
-strip = "debuginfo"
